[package]
name = "mars"
version = "0.1.0"
authors = ["Jacob Rosenzweig <rosenjcb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
rand = "0.7.3"